* Use more systematic attribute names for meta-talents 	* Name_Metatalent: internal name 	* Name_Metatalent_Anzeige: display name (derived from internal name or user-supplied) 	* Name_Metatalent_Eigen: user-supplied name for self-made meta-talents * Remove superfluous special experience column for meta-talents * Improve alignment of pseudo-columns of the repeating group for meta-talents * Ignore user-supplied meta-talent names for official meta-talents (instead of deleting them)

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6259,66 +6259,71 @@
                 <option value=" ">Offen würfeln</option>
                 <option value="/w GM ">Nur zu Meister würfeln</option>
             </select>
-            <br><b style="display: inline-block; font-size:90%; width: 2.5em">SE</b>
-            <b style="display: inline-block; font-size:90%; width: 23em;">Talent (Offiziell / Eigenes)</b>
-            <b style="display: inline-block; font-size:90%; width: 15.25em;">Eigenschaften</b>
-            <b style="display: inline-block; font-size:90%; width: 3.25em;">TaW</b>
-            <b style="display: inline-block; font-size:90%; width: 3em;">Probe</b>
-            <br>
-            <fieldset class="repeating_MetaTalente">
-                <input type="checkbox" name="attr_SE" style="width: 2em" />
-                <select name="attr_TalentName" class="atype" style="width: 10em;">
-                    <option value="nothing">---</option>
-                    <option value="pirschjagd">Pirschjagd</option>
-                    <option value="ansitzjagd">Ansitzjagd</option>
-                    <option value="hetzjagd">Hetzjagd</option>
-                    <option value="speerfischen">Speerfischen</option>
-                    <option value="tierfallenstellen">Tierfallen aufstellen</option>
-                    <option value="nahrungsammeln">Nahrungsammeln</option>
-                    <option value="kraeutersuchen">Kr&auml;utersuchen</option>
-                    <option value="wachehalten">Wachehalten</option>
-                </select>
-                &nbsp;/&nbsp;
-                <input type="text" name="attr_eigenerMetaname" style="width: 10em;"/>
-                <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
-                    <option value="nothing">---</option>
-                    <option value="mu">MU</option>
-                    <option value="kl">KL</option>
-                    <option value="in">IN</option>
-                    <option value="ch">CH</option>
-                    <option value="ff">FF</option>
-                    <option value="ge">GE</option>
-                    <option value="ko">KO</option>
-                    <option value="kk">KK</option>
-                </select>
-                <select name="attr_Eigenschaft2" class="sheet-talent-eigenschaft">
-                    <option value="nothing">---</option>
-                    <option value="mu">MU</option>
-                    <option value="kl">KL</option>
-                    <option value="in">IN</option>
-                    <option value="ch">CH</option>
-                    <option value="ff">FF</option>
-                    <option value="ge">GE</option>
-                    <option value="ko">KO</option>
-                    <option value="kk">KK</option>
-                </select>
-                <select name="attr_Eigenschaft3" class="sheet-talent-eigenschaft">
-                    <option value="nothing">---</option>
-                    <option value="mu">MU</option>
-                    <option value="kl">KL</option>
-                    <option value="in">IN</option>
-                    <option value="ch">CH</option>
-                    <option value="ff">FF</option>
-                    <option value="ge">GE</option>
-                    <option value="ko">KO</option>
-                    <option value="kk">KK</option>
-                </select>
-                <input type="number" name="attr_TaW" style="width: 3em;" value=0>
-                <input type="hidden" name="attr_hiddenEigenschaft1">
-                <input type="hidden" name="attr_hiddenEigenschaft2">
-                <input type="hidden" name="attr_hiddenEigenschaft3">
-                <input type="hidden" name="attr_realName">
-                <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{realName}}} {{mod=[[?{Erleichterung (-) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{hiddenEigenschaft1}]]}} {{stat2=[[@{hiddenEigenschaft2}]]}} {{stat3=[[@{hiddenEigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (-) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
+            <table>
+                <tr>
+                    <th style="width: 23em">Talent</th>
+                    <th style="width: 15.25em;">Eigenschaften</th>
+                    <th style="width: 3.25em;">TaW</th>
+                    <th style="width: 3em;">Probe</th>
+                </tr>
+            </table>
+            <fieldset class="repeating_Metatalente">
+                <span style="display: inline-block; width: 23em">
+                    <select name="attr_Name_Metatalent" class="atype" style="width: 10em;">
+                        <option value="ansitzjagd">Ansitzjagd</option>
+                        <option value="hetzjagd">Hetzjagd</option>
+                        <option value="speerfischen">Speerfischen</option>
+                        <option value="tierfallenstellen">Tierfallenstellen</option>
+                        <option value="nahrungsammeln">Nahrungsammeln</option>
+                        <option value="kraeutersuchen">Kräutersuchen</option>
+                        <option value="wachehalten">Wachehalten</option>
+                        <option value="nothing" selected>Eigenes</option>
+                    </select>
+                     / 
+                    <input type="text" name="attr_Name_Metatalent_Eigen" style="width: 10em;"/>
+                </span><span style="display: inline-block; width: 15.25em">
+                    <select name="attr_Eigenschaft1" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                    <select name="attr_Eigenschaft2" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                    <select name="attr_Eigenschaft3" class="sheet-talent-eigenschaft">
+                        <option value="nothing">---</option>
+                        <option value="mu">MU</option>
+                        <option value="kl">KL</option>
+                        <option value="in">IN</option>
+                        <option value="ch">CH</option>
+                        <option value="ff">FF</option>
+                        <option value="ge">GE</option>
+                        <option value="ko">KO</option>
+                        <option value="kk">KK</option>
+                    </select>
+                </span><span style="display: inline-block; width: 3.25em">
+                    <input type="number" name="attr_TaW" style="width: 3em;" value=0>
+                    <input type="hidden" name="attr_hiddenEigenschaft1">
+                    <input type="hidden" name="attr_hiddenEigenschaft2">
+                    <input type="hidden" name="attr_hiddenEigenschaft3">
+                    <input type="hidden" name="attr_Name_Metatalent_Anzeige">
+                </span><span style="display: inline-block; width: 3em">
+                    <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{Name_Metatalent_Anzeige}}} {{mod=[[?{Erleichterung (-) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{hiddenEigenschaft1}]]}} {{stat2=[[@{hiddenEigenschaft2}]]}} {{stat3=[[@{hiddenEigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (-) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
+                </span>
             </fieldset>
         </div>
     </div>
@@ -15504,24 +15509,26 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
     }); 
 });
 
-on("change:repeating_metatalente:talentname", function(eventInfo) {
-    getAttrs(["repeating_metatalente_talentname"], function(v) {
-        let talentName = v.repeating_metatalente_talentname; 
+on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Name_Metatalent_Eigen", function(eventInfo) {
+    getAttrs(["repeating_metatalente_Name_Metatalent", "repeating_metatalente_Name_Metatalent_Eigen"], function(v) {
+        let metatalent = v.repeating_metatalente_Name_Metatalent;
+        let metatalentEigen = v.repeating_metatalente_Name_Metatalent_Eigen;
         let metaTalente = {"pirschjagd":"mu/in/ge","ansitzjagd":"mu/in/ge","hetzjagd":"mu/in/ge","speerfischen":"mu/in/ge","tierfallenstellen":"kl/in/ff","nahrungsammeln":"mu/in/ff","kraeutersuchen":"mu/in/ff","wachehalten":"mu/in/ko"};
-        if (talentName != "nothing")  {
+        if (metatalent != "nothing")  {
             setAttrs({
-                'repeating_metatalente_eigenschaft1': metaTalente[talentName].split("/")[0],
-                'repeating_metatalente_eigenschaft2': metaTalente[talentName].split("/")[1],
-                'repeating_metatalente_eigenschaft3': metaTalente[talentName].split("/")[2],
-                'repeating_metatalente_eigenerMetaname': "",
-                'repeating_metatalente_realName': talentName.charAt(0).toUpperCase() + talentName.slice(1)
+                'repeating_metatalente_eigenschaft1': metaTalente[metatalent].split("/")[0],
+                'repeating_metatalente_eigenschaft2': metaTalente[metatalent].split("/")[1],
+                'repeating_metatalente_eigenschaft3': metaTalente[metatalent].split("/")[2],
+                'repeating_metatalente_Name_Metatalent_Anzeige': metatalent.charAt(0).toUpperCase() + metatalent.slice(1)
             });
         } else {
-            setAttrs({
-                'repeating_metatalente_eigenschaft1': "nothing",
-                'repeating_metatalente_eigenschaft2': "nothing",
-                'repeating_metatalente_eigenschaft3': "nothing"
-            });
+            let update = {};
+            if (metatalentEigen != "") {
+                update['repeating_metatalent_Name_Metatalent_Anzeige'] = metatalentEigen;
+            } else {
+                update['repeating_metatalent_Name_Metatalent_Anzeige'] = "Eigenes Metatalent";
+            }
+            setAttrs(update);
         }
     });
 });
@@ -15553,18 +15560,6 @@ on("change:mu change:kl change:in change:ch change:ff change:ge change:ko change
                 });
             });
         });
-    });
-});
-
-on("change:repeating_metatalente:eigenerMetaname", function(eventInfo) {
-    getAttrs(["repeating_metatalente_eigenerMetaname"], function(v) {
-        let talentName = v.repeating_metatalente_eigenerMetaname; 
-        if (talentName != "") {
-            setAttrs({
-                'repeating_metatalente_talentname': "nothing",
-                'repeating_metatalente_realName': talentName.charAt(0).toUpperCase() + talentName.slice(1)
-            });
-        }
     });
 });
 
