* Sort metatalents alphabetically * Use 2D array to store stats used for metatalents and display names

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6272,10 +6272,11 @@
                     <select name="attr_Name_Metatalent" class="atype" style="width: 10em;">
                         <option value="ansitzjagd">Ansitzjagd</option>
                         <option value="hetzjagd">Hetzjagd</option>
+                        <option value="kraeutersuchen">Kräutersuchen</option>
+                        <option value="nahrungsammeln">Nahrungsammeln</option>
+                        <option value="pirschjagd">Pirschjagd</option>
                         <option value="speerfischen">Speerfischen</option>
                         <option value="tierfallenstellen">Tierfallenstellen</option>
-                        <option value="nahrungsammeln">Nahrungsammeln</option>
-                        <option value="kraeutersuchen">Kräutersuchen</option>
                         <option value="wachehalten">Wachehalten</option>
                         <option value="nothing" selected>Eigenes</option>
                     </select>
@@ -15513,13 +15514,22 @@ on("change:repeating_metatalente:Name_Metatalent change:repeating_metatalente:Na
     getAttrs(["repeating_metatalente_Name_Metatalent", "repeating_metatalente_Name_Metatalent_Eigen"], function(v) {
         let metatalent = v.repeating_metatalente_Name_Metatalent;
         let metatalentEigen = v.repeating_metatalente_Name_Metatalent_Eigen;
-        let metaTalente = {"pirschjagd":"mu/in/ge","ansitzjagd":"mu/in/ge","hetzjagd":"mu/in/ge","speerfischen":"mu/in/ge","tierfallenstellen":"kl/in/ff","nahrungsammeln":"mu/in/ff","kraeutersuchen":"mu/in/ff","wachehalten":"mu/in/ko"};
+        let metatalente = {
+            "ansitzjagd": [ ["mu", "in", "ge"], "Ansitzjagd" ],
+            "hetzjagd": [ ["mu", "in", "ge"], "Hetzjagd" ],
+            "kraeutersuchen": [ ["mu", "in", "ff"], "Kräutersuchen" ],
+            "nahrungsammeln": [ ["mu", "in", "ff"], "Nahrungsammeln" ],
+            "pirschjagd": [ ["mu", "in", "ge"], "Pirschjagd" ],
+            "speerfischen": [ ["mu", "in", "ge"], "Speerfischen" ],
+            "tierfallenstellen": [ ["kl", "in", "ff"], "Tierfallenstellen" ],
+            "wachehalten": [ ["mu", "in", "ko"], "Wachehalten" ]
+        };
         if (metatalent != "nothing")  {
             setAttrs({
-                'repeating_metatalente_eigenschaft1': metaTalente[metatalent].split("/")[0],
-                'repeating_metatalente_eigenschaft2': metaTalente[metatalent].split("/")[1],
-                'repeating_metatalente_eigenschaft3': metaTalente[metatalent].split("/")[2],
-                'repeating_metatalente_Name_Metatalent_Anzeige': metatalent.charAt(0).toUpperCase() + metatalent.slice(1)
+                'repeating_metatalente_eigenschaft1': metatalente[metatalent][0][0],
+                'repeating_metatalente_eigenschaft2': metatalente[metatalent][0][1],
+                'repeating_metatalente_eigenschaft3': metatalente[metatalent][0][2],
+                'repeating_metatalente_Name_Metatalent_Anzeige': metatalente[metatalent][1]
             });
         } else {
             let update = {};
