--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6317,11 +6317,11 @@
                         <option value="kk">KK</option>
                     </select>
                 </span><span style="display: inline-block; width: 3.25em">
-                    <input type="number" name="attr_TaW" style="width: 3em;" value=0>
-                    <input type="hidden" name="attr_hiddenEigenschaft1">
-                    <input type="hidden" name="attr_hiddenEigenschaft2">
-                    <input type="hidden" name="attr_hiddenEigenschaft3">
-                    <input type="hidden" name="attr_Name_Metatalent_Anzeige">
+                    <input type="number" name="attr_TaW" style="width: 3em;" value="0">
+                    <input type="hidden" name="attr_hiddenEigenschaft1" value="0">
+                    <input type="hidden" name="attr_hiddenEigenschaft2" value="0">
+                    <input type="hidden" name="attr_hiddenEigenschaft3" value="0">
+                    <input type="hidden" name="attr_Name_Metatalent_Anzeige" value="Eigenes Metatalent">
                 </span><span style="display: inline-block; width: 3em">
                     <button type="roll" value="@{gm_roll_opt} &{template:DSA-Talente} {{name=@{Name_Metatalent_Anzeige}}} {{mod=[[?{Erleichterung (-) oder Erschwernis (+)|0}d1cs0cf2]]}} {{taw=[[@{TaW}]]}} {{stat1=[[@{hiddenEigenschaft1}]]}} {{stat2=[[@{hiddenEigenschaft2}]]}} {{stat3=[[@{hiddenEigenschaft3}]]}} {{Talent=[[ { [[{0d1 + @{TaW} - (?{Erleichterung (-) oder Erschwernis (+)|0}), 0d1}kh1]] - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft1}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft2}, 0d1}kh1 - {1d20cs1cf20 + [[{0d1 + (?{Erleichterung (-) oder Erschwernis (+)|0}) - @{TaW}, 0d1}kh1]] - @{hiddenEigenschaft3}, 0d1}kh1, 0d1 + @{TaW}}dh1]]}}"></button>
                 </span>
