* Remove unused duplicate attributes of stats

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -636,14 +636,14 @@
         <br>
         <table align="center">
             <tr>
-                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU2" readonly="readonly" value="0"></th>
-                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL2" readonly="readonly" value="0"></th>
-                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN2" readonly="readonly" value="0"></th>
-                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH2" readonly="readonly" value="0"></th>
-                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF2" readonly="readonly" value="0"></th>
-                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE2" readonly="readonly" value="0"></th>
-                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO2" readonly="readonly" value="0"></th>
-                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK2" readonly="readonly" value="0"></th>
+                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU" readonly="readonly" value="0"></th>
+                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL" readonly="readonly" value="0"></th>
+                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN" readonly="readonly" value="0"></th>
+                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH" readonly="readonly" value="0"></th>
+                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF" readonly="readonly" value="0"></th>
+                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE" readonly="readonly" value="0"></th>
+                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO" readonly="readonly" value="0"></th>
+                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK" readonly="readonly" value="0"></th>
                 <th>BE: <input type="text" class="sheet-stat-immutable" name="attr_BE_TaW" disabled="disabled" value="(@{Ges_BE} + @{BE_Last})"></th>
             </tr>
         </table>
@@ -6335,14 +6335,14 @@
         <br>
         <table align="center">
             <tr>
-                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU2" disabled="true" value="@{MU}"></th>
-                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL2" disabled="true" value="@{KL}"></th>
-                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN2" disabled="true" value="@{IN}"></th>
-                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH2" disabled="true" value="@{CH}"></th>
-                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF2" disabled="true" value="@{FF}"></th>
-                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE2" disabled="true" value="@{GE}"></th>
-                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO2" disabled="true" value="@{KO}"></th>
-                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK2" disabled="true" value="@{KK}"></th>
+                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU" disabled="true" value="@{MU}"></th>
+                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL" disabled="true" value="@{KL}"></th>
+                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN" disabled="true" value="@{IN}"></th>
+                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH" disabled="true" value="@{CH}"></th>
+                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF" disabled="true" value="@{FF}"></th>
+                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE" disabled="true" value="@{GE}"></th>
+                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO" disabled="true" value="@{KO}"></th>
+                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK" disabled="true" value="@{KK}"></th>
                 <th>BE: <input type="text" class="sheet-stat-immutable" name="attr_BE_TaW" disabled="true" value="(@{Ges_BE} + @{BE_Last})"></th>
             </tr>
         </table>
@@ -15472,21 +15472,13 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
         // Attribute setzen
         setAttrs({
             mu: +v.mu_basis + +v.mu_mod - +wundeKopf,
-            mu2: +v.mu_basis + +v.mu_mod - +wundeKopf,
             kl: +v.kl_basis + +v.kl_mod - +wundeKopf,
-            kl2: +v.kl_basis + +v.kl_mod - +wundeKopf,
             in: +v.in_basis + +v.in_mod - +wundeKopf,
-            in2: +v.in_basis + +v.in_mod - +wundeKopf,
             ch: +v.ch_basis + +v.ch_mod,
-            ch2: +v.ch_basis + +v.ch_mod,
             ff: +v.ff_basis + +v.ff_mod - +wundeRA - +wundeLA,
-            ff2: +v.ff_basis + +v.ff_mod - +wundeRA - +wundeLA,
             ge: +v.ge_basis + +v.ge_mod - +wundeLB - +wundeRB,
-            ge2: +v.ge_basis + +v.ge_mod - +wundeLB - +wundeRB,
             ko: +v.ko_basis + +v.ko_mod - +wundeBrust - +wundeBauch,
-            ko2: +v.ko_basis + +v.ko_mod - +wundeBrust - +wundeBauch,
-            kk: +v.kk_basis + +v.kk_mod - +wundeBrust - +wundeBauch - +wundeRA - +wundeLA,
-            kk2: +v.kk_basis + +v.kk_mod - +wundeBrust - +wundeBauch - +wundeRA - +wundeLA
+            kk: +v.kk_basis + +v.kk_mod - +wundeBrust - +wundeBauch - +wundeRA - +wundeLA
         }); 
         // Abgeleitete werte setzen
         setAttrs({
