* Fix calculation of wound threshold

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -15485,7 +15485,7 @@ on("sheet:opened change:wound_kopf change:wound_ra change:wound_la change:wound_
            gs: +v.gs_basis + +v.gs_mod + Math.floor(((+v.ge_basis + +v.ge_mod + 100) / 111) - 1) + Math.ceil(((+v.ge_basis + +v.ge_mod + 100)/115) - 1) - +wundeBauch - (+wundeRB / 2 - +wundeLB / 2),
            erschoepfung_basis: +v.ko_basis,
            erschoepfung_max: +v.ko_basis + +v.erschoepfung_mod,
-           wundschwelle: Math.ceil(+v.ko_basis + +v.eisern),
+           wundschwelle: Math.ceil(((+v.ko_basis) / 2)) + +v.eisern,
            aspgrundw: Math.round((+v.mu_basis + +v.in_basis + +v.ch_basis) / 2 + 0.05),
            asp_max: Math.round((+v.mu_basis + +v.in_basis + +v.ch_basis) / 2 + 0.05) + +v.aspzugek,
            ausgrundw: Math.round((+v.mu_basis + +v.ko_basis + +v.ge_basis) / 2 + 0.05),
