--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -6335,15 +6335,15 @@
         <br>
         <table align="center">
             <tr>
-                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU" disabled="true" value="@{MU}"></th>
-                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL" disabled="true" value="@{KL}"></th>
-                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN" disabled="true" value="@{IN}"></th>
-                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH" disabled="true" value="@{CH}"></th>
-                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF" disabled="true" value="@{FF}"></th>
-                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE" disabled="true" value="@{GE}"></th>
-                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO" disabled="true" value="@{KO}"></th>
-                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK" disabled="true" value="@{KK}"></th>
-                <th>BE: <input type="text" class="sheet-stat-immutable" name="attr_BE_TaW" disabled="true" value="(@{Ges_BE} + @{BE_Last})"></th>
+                <th>MU: <input type="text" class="sheet-stat-immutable" name="attr_MU" readonly="readonly" value="0"></th>
+                <th>KL: <input type="text" class="sheet-stat-immutable" name="attr_KL" readonly="readonly" value="0"></th>
+                <th>IN: <input type="text" class="sheet-stat-immutable" name="attr_IN" readonly="readonly" value="0"></th>
+                <th>CH: <input type="text" class="sheet-stat-immutable" name="attr_CH" readonly="readonly" value="0"></th>
+                <th>FF: <input type="text" class="sheet-stat-immutable" name="attr_FF" readonly="readonly" value="0"></th>
+                <th>GE: <input type="text" class="sheet-stat-immutable" name="attr_GE" readonly="readonly" value="0"></th>
+                <th>KO: <input type="text" class="sheet-stat-immutable" name="attr_KO" readonly="readonly" value="0"></th>
+                <th>KK: <input type="text" class="sheet-stat-immutable" name="attr_KK" readonly="readonly" value="0"></th>
+                <th>BE: <input type="text" class="sheet-stat-immutable" name="attr_BE_TaW" disabled="disabled" value="(@{Ges_BE} + @{BE_Last})"></th>
             </tr>
         </table>
         <br>
@@ -12554,7 +12554,7 @@
             <br>
             <td colspan="2" align="right">Wundschwelle</td>
             <td>
-                <input name="attr_Wundschwelle" style="width: 5em;" type="number" disabled="true" value="ceil((@{KO_Basis}/2) + @{Eisern})">
+                <input name="attr_Wundschwelle" style="width: 5em;" type="number" value="0" readonly="readonly">
             </td>
             <td colspan="2" align="right">Eisern?
                 <input type="checkbox" name="attr_Eisern" Value="2">
