* Fix: Propagate stats updates to gifts' stats

--- a/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
+++ b/Das_Schwarze_Auge_4-1/dsa4_1_character_sheet_roll20.html
@@ -15688,7 +15688,7 @@ on("change:mu change:kl change:in change:ch change:ff change:ge change:ko change
         // Aktualisiere Gaben
         getSectionIDs("gaben", function(idarray) {
              _.each(idarray, function(currentID, i) {
-                getAttrs(["repeating_Gaben_" + currentID + "_eigenschaften"], function(v) {
+                getAttrs(["repeating_Gaben_" + currentID + "_eigenschaft1", "repeating_Gaben_" + currentID + "_eigenschaft2", "repeating_Gaben_" + currentID + "_eigenschaft3"], function(v) {
                     update["repeating_Gaben_" + currentID + "_hiddeneigenschaft1"] = attributes[v["repeating_Gaben_" + currentID + "_eigenschaft1"]];
                     update["repeating_Gaben_" + currentID + "_hiddeneigenschaft2"] = attributes[v["repeating_Gaben_" + currentID + "_eigenschaft2"]];
                     update["repeating_Gaben_" + currentID + "_hiddeneigenschaft3"] = attributes[v["repeating_Gaben_" + currentID + "_eigenschaft3"]];
