fix melee dmg macro

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -801,7 +801,7 @@
           </div>
           <div class="sheet-row sheet-twice sheet-Makro_mw">
             <textarea name="attr_meleeattack_makro">/me schlägt mit @{meleeweaponname} und trifft mit [[1d6! + ((@{ge} - 1) + @{meleeweaponclass} + @{meleeweapontemp} - @{malusGesamt} + ?{Modifier?|0})d6]] Erfolgen auf die Trefferzone [[ 2d6 ]]</textarea>
-            <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + @{meleeweapondamage}) + ?{Modifier?|0}d6]] Schaden</textarea>
+            <textarea name="attr_meleedamage_makro">/me und macht [[1d6! + ((@{st} - 1) + ?{Modifier?|0})d6 + @{meleeweapondamage}]] Schaden</textarea>
           </div>
         </div>
       </fieldset>
