add characteristic points

--- a/NoReturn/NoReturn.html
+++ b/NoReturn/NoReturn.html
@@ -870,7 +870,7 @@
       <div class="sheet-col sheet-inv">
         <h3>Charaktermerkmale:</h3>
         <fieldset class="repeating_charMerkmale" style="margin:auto;">
-          <input type="text" style="width:85%" name="attr_charMerkmale" />
+          <input type="text" style="width:85%" name="attr_charMerkmale" />(<input type="number" style="width:10%;" name="attr_charMerkmale_punkte" />)
         </fieldset>
       </div>
   </div>
