BTATOW More playing around with CSS and styling.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -429,127 +429,129 @@
 <!-- SKILLS -->
 <div class="tab-content tab3 main">
     <h1>Skills</h1>
-    <span>Skill</span>
-    <span>Level</span>
-    <span>Links</span>
-    <span>Mod</span>
-    <span>TN/C</span>
-    <span>XP</span>
+    <div>
+        <span>Skill</span>
+        <span>Level</span>
+        <span>Links</span>
+        <span>Mod</span>
+        <span>TN/C</span>
+        <span>XP</span>
+    </div>
     <fieldset class="repeating_skills">
-        <select name="attr_skill" class="skills">
-            <option value="acrobatics_free_fall">Acrobatics/Free-Fall</option>
-            <option value="acrobatics_gymnastics">Acrobatics/Gymnastics</option>
-            <option value="acting">Acting</option>
-            <option value="administration">Administration</option>
-            <option value="animal_handling_herding">Animal Handling/Herding</option>
-            <option value="animal_handling_riding">Animal Handling/Riding</option>
-            <option value="animal_handling_training">Animal Handling/Training</option>
-            <option value="appraisal">Appraisal</option>
-            <option value="archery">Archery</option>
-            <option value="art">Art</option>
-            <option value="artillery">Artillery</option>
-            <option value="career">Career</option>
-            <option value="climbing">Climbing</option>
-            <option value="communications_black_box">Communications/Black Box</option>
-            <option value="communications_conventional">Communications/Conventional (EM)</option>
-            <option value="communications_hyperpulse_generator">Communications/Hyperpulse Generator</option>
-            <option value="computers">Computers</option>
-            <option value="cryptography">Cryptography</option>
-            <option value="demolitions">Demolitions</option>
-            <option value="disguise">Disguise</option>
-            <option value="driving_ground_vehicles">Driving/Ground Vehicles</option>
-            <option value="driving_rail_vehicles">Driving/Rail Vehicles</option>
-            <option value="driving_sea_vehicles">Driving/Sea Vehicles</option>
-            <option value="escape_artist">Escape Artist</option>
-            <option value="forgery">Forgery</option>
-            <option value="gunnery_aerospace">Gunnery/Aerospace</option>
-            <option value="gunnery_air_vehicle">Gunnery/Air Vehicle</option>
-            <option value="gunnery_battlesuit">Gunnery/Battlesuit</option>
-            <option value="gunnery_ground_vehicle">Gunnery/Ground Vehicle</option>
-            <option value="gunnery_mech">Gunnery/'Mech</option>
-            <option value="gunnery_protomech">Gunnery/ProtoMech</option>
-            <option value="gunnery_sea_vehicle">Gunnery/Sea Vehicle</option>
-            <option value="gunnery_spacecraft">Gunnery/Spacecraft</option>
-            <option value="gunnery_turret">Gunnery/Turret</option>
-            <option value="interest">Interest</option>
-            <option value="interrogation">Interrogation</option>
-            <option value="investigation">Investigation</option>
-            <option value="language">Language</option>
-            <option value="leadership">Leadership</option>
-            <option value="martial_arts">Martial Arts</option>
-            <option value="medtech_general">MedTech/General</option>
-            <option value="medtech_veterinary">MedTech/Veterinary</option>
-            <option value="melee_weapons">Melee Weapons</option>
-            <option value="navigation_air">Navigation/Air</option>
-            <option value="navigation_ground">Navigation/Ground</option>
-            <option value="navigation_kf_jump">Navigation/K-F Jump</option>
-            <option value="navigation_sea">Navigation/Sea</option>
-            <option value="navigation_space">Navigation/Space</option>
-            <option value="negotiation">Negotiation</option>
-            <option value="perception">Perception</option>
-            <option value="piloting_aerospace">Piloting/Aerospace</option>
-            <option value="piloting_air_vehicle">Piloting/Air Vehicle</option>
-            <option value="piloting_battlesuit">Piloting/Battlesuit</option>
-            <option value="piloting_ground_vehicle">Piloting/Ground Vehicle</option>
-            <option value="piloting_mech">Piloting/'Mech</option>
-            <option value="piloting_protomech">Piloting/ProtoMech</option>
-            <option value="piloting_rail_vehicle">Piloting/Rail Vehicle</option>
-            <option value="piloting_sea_vehicle">Piloting/Sea Vehicle</option>
-            <option value="piloting_spacecraft">Piloting/Spacecraft</option>
-            <option value="prestidigitation_pick_pocket">Prestidigitation/Pick Pocket</option>
-            <option value="prestidigitation_quickdraw">Prestidigitation/Quickdraw</option>
-            <option value="prestidigitation_sleight_of_hand">Prestidigitation/Sleight of Hand</option>
-            <option value="protocol">Protocol</option>
-            <option value="running">Running</option>
-            <option value="science">Science</option>
-            <option value="security_systems_electronic">Security Systems/Electronic</option>
-            <option value="security_systems_mechanical">Security Systems/Mechanical</option>
-            <option value="sensor_operations">Sensor Operations</option>
-            <option value="small_arms">Small Arms</option>
-            <option value="stealth">Stealth</option>
-            <option value="strategy">Strategy</option>
-            <option value="streetwise">Streetwise</option>
-            <option value="support_weapons">Support Weapons</option>
-            <option value="surgery_general">Surgery/General</option>
-            <option value="surgery_veterinary">Surgery/Veterinary</option>
-            <option value="survival">Survival</option>
-            <option value="swimming">Swimming</option>
-            <option value="tactics_air">Tactics/Air</option>
-            <option value="tactics_infantry">Tactics/Infantry</option>
-            <option value="tactics_land">Tactics/Land</option>
-            <option value="tactics_sea">Tactics/Sea</option>
-            <option value="tactics_space">Tactics/Space</option>
-            <option value="technician_aeronautics">Technician/Aeronautics</option>
-            <option value="technician_cybernetics">Technician/Cybernetics</option>
-            <option value="technician_electronics">Technician/Electronics</option>
-            <option value="technician_jets">Technician/Jets</option>
-            <option value="technician_mechanical">Technician/Mechanical</option>
-            <option value="technician_myomer">Technician/Myomer</option>
-            <option value="technician_nuclear">Technician/Nuclear</option>
-            <option value="technician_weapons">Technician/Weapons</option>
-            <option value="thrown_weapons_blades">Thrown Weapons/Blades</option>
-            <option value="thrown_weapons_blunt_weapons">Thrown Weapons/Blunt Weapons</option>
-            <option value="tracking_urban">Tracking/Urban</option>
-            <option value="tracking_wilds">Tracking/Wilds</option>
-            <option value="training">Training</option>
-            <option value="zerog_operations">Zero-G Operations</option>
-        </select>
-        <input type="text" name="attr_sub_skill" class="skills">
-        <span class="skills">
-            <span name="attr_skill_level" style="width: 50px"></span>
+        <div class="skills-container">
+            <select name="attr_skill" class="skills">
+                <option value="acrobatics_free_fall">Acrobatics/Free-Fall</option>
+                <option value="acrobatics_gymnastics">Acrobatics/Gymnastics</option>
+                <option value="acting">Acting</option>
+                <option value="administration">Administration</option>
+                <option value="animal_handling_herding">Animal Handling/Herding</option>
+                <option value="animal_handling_riding">Animal Handling/Riding</option>
+                <option value="animal_handling_training">Animal Handling/Training</option>
+                <option value="appraisal">Appraisal</option>
+                <option value="archery">Archery</option>
+                <option value="art">Art</option>
+                <option value="artillery">Artillery</option>
+                <option value="career">Career</option>
+                <option value="climbing">Climbing</option>
+                <option value="communications_black_box">Communications/Black Box</option>
+                <option value="communications_conventional">Communications/Conventional (EM)</option>
+                <option value="communications_hyperpulse_generator">Communications/Hyperpulse Generator</option>
+                <option value="computers">Computers</option>
+                <option value="cryptography">Cryptography</option>
+                <option value="demolitions">Demolitions</option>
+                <option value="disguise">Disguise</option>
+                <option value="driving_ground_vehicles">Driving/Ground Vehicles</option>
+                <option value="driving_rail_vehicles">Driving/Rail Vehicles</option>
+                <option value="driving_sea_vehicles">Driving/Sea Vehicles</option>
+                <option value="escape_artist">Escape Artist</option>
+                <option value="forgery">Forgery</option>
+                <option value="gunnery_aerospace">Gunnery/Aerospace</option>
+                <option value="gunnery_air_vehicle">Gunnery/Air Vehicle</option>
+                <option value="gunnery_battlesuit">Gunnery/Battlesuit</option>
+                <option value="gunnery_ground_vehicle">Gunnery/Ground Vehicle</option>
+                <option value="gunnery_mech">Gunnery/'Mech</option>
+                <option value="gunnery_protomech">Gunnery/ProtoMech</option>
+                <option value="gunnery_sea_vehicle">Gunnery/Sea Vehicle</option>
+                <option value="gunnery_spacecraft">Gunnery/Spacecraft</option>
+                <option value="gunnery_turret">Gunnery/Turret</option>
+                <option value="interest">Interest</option>
+                <option value="interrogation">Interrogation</option>
+                <option value="investigation">Investigation</option>
+                <option value="language">Language</option>
+                <option value="leadership">Leadership</option>
+                <option value="martial_arts">Martial Arts</option>
+                <option value="medtech_general">MedTech/General</option>
+                <option value="medtech_veterinary">MedTech/Veterinary</option>
+                <option value="melee_weapons">Melee Weapons</option>
+                <option value="navigation_air">Navigation/Air</option>
+                <option value="navigation_ground">Navigation/Ground</option>
+                <option value="navigation_kf_jump">Navigation/K-F Jump</option>
+                <option value="navigation_sea">Navigation/Sea</option>
+                <option value="navigation_space">Navigation/Space</option>
+                <option value="negotiation">Negotiation</option>
+                <option value="perception">Perception</option>
+                <option value="piloting_aerospace">Piloting/Aerospace</option>
+                <option value="piloting_air_vehicle">Piloting/Air Vehicle</option>
+                <option value="piloting_battlesuit">Piloting/Battlesuit</option>
+                <option value="piloting_ground_vehicle">Piloting/Ground Vehicle</option>
+                <option value="piloting_mech">Piloting/'Mech</option>
+                <option value="piloting_protomech">Piloting/ProtoMech</option>
+                <option value="piloting_rail_vehicle">Piloting/Rail Vehicle</option>
+                <option value="piloting_sea_vehicle">Piloting/Sea Vehicle</option>
+                <option value="piloting_spacecraft">Piloting/Spacecraft</option>
+                <option value="prestidigitation_pick_pocket">Prestidigitation/Pick Pocket</option>
+                <option value="prestidigitation_quickdraw">Prestidigitation/Quickdraw</option>
+                <option value="prestidigitation_sleight_of_hand">Prestidigitation/Sleight of Hand</option>
+                <option value="protocol">Protocol</option>
+                <option value="running">Running</option>
+                <option value="science">Science</option>
+                <option value="security_systems_electronic">Security Systems/Electronic</option>
+                <option value="security_systems_mechanical">Security Systems/Mechanical</option>
+                <option value="sensor_operations">Sensor Operations</option>
+                <option value="small_arms">Small Arms</option>
+                <option value="stealth">Stealth</option>
+                <option value="strategy">Strategy</option>
+                <option value="streetwise">Streetwise</option>
+                <option value="support_weapons">Support Weapons</option>
+                <option value="surgery_general">Surgery/General</option>
+                <option value="surgery_veterinary">Surgery/Veterinary</option>
+                <option value="survival">Survival</option>
+                <option value="swimming">Swimming</option>
+                <option value="tactics_air">Tactics/Air</option>
+                <option value="tactics_infantry">Tactics/Infantry</option>
+                <option value="tactics_land">Tactics/Land</option>
+                <option value="tactics_sea">Tactics/Sea</option>
+                <option value="tactics_space">Tactics/Space</option>
+                <option value="technician_aeronautics">Technician/Aeronautics</option>
+                <option value="technician_cybernetics">Technician/Cybernetics</option>
+                <option value="technician_electronics">Technician/Electronics</option>
+                <option value="technician_jets">Technician/Jets</option>
+                <option value="technician_mechanical">Technician/Mechanical</option>
+                <option value="technician_myomer">Technician/Myomer</option>
+                <option value="technician_nuclear">Technician/Nuclear</option>
+                <option value="technician_weapons">Technician/Weapons</option>
+                <option value="thrown_weapons_blades">Thrown Weapons/Blades</option>
+                <option value="thrown_weapons_blunt_weapons">Thrown Weapons/Blunt Weapons</option>
+                <option value="tracking_urban">Tracking/Urban</option>
+                <option value="tracking_wilds">Tracking/Wilds</option>
+                <option value="training">Training</option>
+                <option value="zerog_operations">Zero-G Operations</option>
+            </select>
+            <input type="text" name="attr_sub_skill" class="skills">
+            <span name="attr_skill_level" style="width: 20px" class="skills skills-labels"></span>
             <input type="hidden" name="attr_skill_level" value="0">
-            <span name="attr_skill_linked_attributes" style="width: 200px"></span>
+            <span name="attr_skill_linked_attributes" style="width: 75px" class="skills skills-labels"></span>
             <input type="hidden" name="attr_skill_linked_attributes" value="RFL">
-            <span name="attr_skill_modifier" style="width: 50px"></span>
+            <span name="attr_skill_modifier" style="width: 50px" class="skills skills-labels"></span>
             <input type="hidden" name="attr_skill_modifier" value="0">
-            <span name="attr_skill_tnc" style="width: 50px"></span>
+            <span name="attr_skill_tnc" style="width: 50px" class="skills skills-labels"></span>
             <input type="hidden" name="attr_skill_tnc" value="7 / CB">
             <input type="hidden" name="attr_target_number" value="7">
-            <input type="number" name="attr_skill_xp" value="20" style="width: 50px">
+            <input type="number" name="attr_skill_xp" value="20" style="width: 50px" class="skills skills-labels">
             <input type="hidden" name="attr_skill_roll_value" value="Acrobatics/Free-Fall Skill Check
                                     Margin of Success: [[2d6 + @{skill_modifier}[MOD] - @{target_number}[TN]]]">
-            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}"></button>
-        </span>
+            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skills skills-labels"></button>
+        </div>
     </fieldset>
 </div>
 
