BTATOW Add attribute names as title property to skill fields.

--- a/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
+++ b/BattleTech-A-Time-of-War/BattleTech-A-Time-of-War.html
@@ -439,7 +439,7 @@
     </div>
     <fieldset class="repeating_skills">
         <div class="skills-container">
-            <select name="attr_skill" class="skills">
+            <select name="attr_skill" class="skills" title="@{repeating_skills_$id_skill}">
                 <option value="acrobatics_free_fall">Acrobatics/Free-Fall</option>
                 <option value="acrobatics_gymnastics">Acrobatics/Gymnastics</option>
                 <option value="acting">Acting</option>
@@ -537,20 +537,20 @@
                 <option value="training">Training</option>
                 <option value="zerog_operations">Zero-G Operations</option>
             </select>
-            <input type="text" name="attr_sub_skill" class="skills">
-            <span name="attr_skill_level" style="width: 20px" class="skills skills-labels"></span>
+            <input type="text" name="attr_sub_skill" class="skills" title="@{repeating_skills_$id_sub_skill}">
+            <span name="attr_skill_level" style="width: 20px" class="skills skills-labels" title="@{repeating_skills_$id_skill_level}"></span>
             <input type="hidden" name="attr_skill_level" value="0">
-            <span name="attr_skill_linked_attributes" style="width: 75px" class="skills skills-labels"></span>
+            <span name="attr_skill_linked_attributes" style="width: 75px" class="skills skills-labels" title="@{repeating_skills_$id_skill_linked_attributes}"></span>
             <input type="hidden" name="attr_skill_linked_attributes" value="RFL">
-            <span name="attr_skill_modifier" style="width: 50px" class="skills skills-labels"></span>
+            <span name="attr_skill_modifier" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_modifier}"></span>
             <input type="hidden" name="attr_skill_modifier" value="0">
-            <span name="attr_skill_tnc" style="width: 50px" class="skills skills-labels"></span>
+            <span name="attr_skill_tnc" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_tnc}"></span>
             <input type="hidden" name="attr_skill_tnc" value="7 / CB">
             <input type="hidden" name="attr_target_number" value="7">
-            <input type="number" name="attr_skill_xp" value="20" style="width: 50px" class="skills skills-labels">
+            <input type="number" name="attr_skill_xp" value="20" style="width: 50px" class="skills skills-labels" title="@{repeating_skills_$id_skill_xp}">
             <input type="hidden" name="attr_skill_roll_value" value="Acrobatics/Free-Fall Skill Check
                                     Margin of Success: [[2d6 + @{skill_modifier}[MOD] - @{target_number}[TN]]]">
-            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skills skills-labels"></button>
+            <button type="roll" name="roll_skill_check" value="@{skill_roll_value}" class="skills skills-labels" title="@{repeating_skills_$id_skill_check}"></button>
         </div>
     </fieldset>
 </div>
