--- a/Abstract Dungeon (FR base)/Abstract_HTML.html
+++ b/Abstract Dungeon (FR base)/Abstract_HTML.html
@@ -2,7 +2,7 @@
 <input type="checkbox" name="attr_tab" class="sheet-tab-content sheet-tab" value="2"><span></span>
 
 <div class='sheet-tab-content sheet-tab1'>
-    <h1 data-i18n="game">Abstract Donjon</h1>
+    <h1><span span name="attr_game"></span></h1>
     <input type="checkbox" name="attr_npc" class="sheet-sub-tab-content sheet-sub-tab" value="2" checked="true"><span></span>
     <div class='sheet-sub-tab-content sheet-sub-tab1'>
         <div class="meta">
@@ -168,6 +168,9 @@
 </div>
 
 <div class='sheet-tab-content sheet-tab2'>
+    <div>
+        <h2 data-i18n="game's name">Nom du jeu</h2>
+        <input type="text" name="attr_game" value="Abstract Donjon">
     <div>
         <h2 data-i18n="attributes'names">Noms des attributs</h2>
         <input type="text" name="attr_at1" value="Robustesse">
