Formatting and compendium drop target updates

--- a/Lost West Media/LWM_StatTracker.html
+++ b/Lost West Media/LWM_StatTracker.html
@@ -8,16 +8,16 @@
                 <td><button type="roll" class="sheet-blank-roll-button" value="&{template:roll} {{name=Move}}{{Result=[[d6!]]}}"/>Move</button></td>
             </tr>
             <tr>
-                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:off} {{name=?{Name of Offensive Move}}}{{Result=[[d20+?{Power Bonus|0}]]}}"/>Offense</button></td>
+                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:pre} {{name=Power Scale}}{{Result=[[d12cf<3cs>9]]}}"/>Precision</button></td>
             </tr>
             <tr>
-                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:def} {{name=?{Name of Defensive Move}}}{{Result=[[d20+?{Power Bonus|0}]]}}"/>Defense</button></td>
+                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:pow} {{name=Power Bonus}}{{Result=?{Precision Result?| Yellow (4-8), [[ceil((d4/2)-.5)]]| Green (9-12), [[d4]]}}}"/>Power</button></td>
             </tr>
             <tr>
-                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:pow} {{name=Power Bonus}}{{Result=?{Precision Result?| Yellow (4-8), [[ceil((d10/2)-.5)]]| Green (9-12), [[d10]]}}}"/>Power</button></td>
+                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:off} {{name=?{Name of Offensive Move}}}{{Result=[[d20+?{Power Bonus|0|1|2|3|4|5|6|7|8|9|10}+?{Modifier|0|1|2|3|4|5|-1|-2|-3|-4|-5}]]}}"/>Offense</button></td>
             </tr>
             <tr>
-                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:pre} {{name=Power Bonus}}{{Result=[[d12cf<3cs>9]]}}"/>Precision</button></td>
+                <td><button type="roll" class="sheet-blank-roll-button" value="&{template:def} {{name=?{Name of Defensive Move}}}{{Result=[[d20+?{Power Bonus|0|1|2|3|4|5|6|7|8|9|10}+?{Modifier|0|1|2|3|4|5|-1|-2|-3|-4|-5}]]}}"/>Defense</button></td>
             </tr>
         </div>
     </div>
@@ -69,12 +69,13 @@
                             <div class="sheet-row-panel">
                                 <input type="checkbox" name="attr_gsbb-toggle" class="sheet-arrow" />Grand Slam BaseBrawl
                                 <div class="body">
+                                    <fieldset class="repeating_gsbb">
         							<table style="width:25%">
         								<tr>
         									<td><h5></h5></td>
         									<td><h5></h5></td>
+        									<td></td>
         									<td><h4>Inning</h4></td>
-        									<td><h5></h5></td>
         									<td><h4>Balls</h4></td>
         									<td><h4>Strikes</h4></td>
         									<td><h4>Outs</h4></td>
@@ -129,6 +130,7 @@
         									<textarea wrap="soft" class="sheet-textarea" value="" name="attr_gsbb_details" placeholder="Extra Details" ></textarea>
         								</tr>
         							</table>
+        							</fieldset>
                                 </div>
                             </div>
                         </div>
@@ -195,7 +197,7 @@
                                 <div class="sheet-row-panel">
                                     <input type="checkbox" name="attr_rcfb-toggle" class="sheet-arrow" />Red Card FootBrawl
                                     <div class="body">
-                                        <fieldset class="repeating_tdfb">
+                                        <fieldset class="repeating_rcfb">
             							<table style="width:25%">
             								<tr>
             									<td><h5></h5></td>
@@ -290,7 +292,7 @@
                                 <div class="sheet-row-panel">
                                     <input type="checkbox" name="attr_pph-toggle" class="sheet-arrow" />Power Play Hockey
                                     <div class="body">
-                                        <fieldset class="repeating_rr">
+                                        <fieldset class="repeating_pph">
             							<table style="width:25%">
             								<tr>
             									<td><h5></h5></td>
@@ -310,7 +312,6 @@
             									<option value="1st">1st</option>
             									<option value="2nd">2nd</option>
             									<option value="3rd">3rd</option>
-            									<option value="4th">4th</option>
             									<option value="OT">OT</option>
             									</select></td>
             									<td><input class="sheet-input-center-aligned" type="number" value="0" name="attr_pphshots" /></td>
@@ -994,17 +995,23 @@
             			<h2>Brawl</h2>
             			<div class="body">
             				<fieldset class="repeating_brawl"> 
-            					<table style="width:40%">
+            					<table style="width:50%">
             						<tr>
             							<td><h4>Player Name</h4></td>
-            							<td><h4>Hits</h4></td>
+            							<td><h4>Hit Points</h4></td>
+            							<td><h4>Armor Points</h4></td>
             							<td><h4>Wins</h4></td>
             						</tr>
             						<tr>
             							<td><input class="attribute" type="text" value="" name="attr_brawl_name" /></td>
-            							<td><input type="checkbox" name="attr_hit1-toggle" class="sheet-arrow" />
-            							<input type="checkbox" name="attr_hit2-toggle" class="sheet-arrow" />
-            							<input type="checkbox" name="attr_hit3-toggle" class="sheet-arrow" /></td>
+            							<td><input type="checkbox" name="attr_hp1-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_hp2-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_hp3-toggle" class="sheet-arrow" /></td>
+            							<td><input type="checkbox" name="attr_ap1-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_ap2-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_ap3-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_ap4-toggle" class="sheet-arrow" />
+            							<input type="checkbox" name="attr_ap5-toggle" class="sheet-arrow" /></td>
             							<td><input class="sheet-input-center-aligned" type="number" value="0" name="attr_wins" /></td>
             						</tr>
             					</table>
@@ -1017,30 +1024,51 @@
             			<input type="checkbox" name="attr_items-toggle" class="sheet-arrow" /> 
             			<h2>Items</h2>
             			<div class="body">
-            				<fieldset class="repeating_items"> 
+            				<fieldset class="repeating_items">
+            				    <div class="compendium-drop-target">
             					<table style="width:50%">
             						<tr>
             							<td></td>
-            							<td><h4>Name</h4></td>
+            							<td><h4>Player Name</h4></td>
+            							<td><h4>Item Name</h4></td>
+            							<td><h4>Category</h4></td>
             							<td><h4>Type</h4></td>
-            							<td><h4>Bonus/Penalty</h4></td>
+            							<td><h4>Rarity</h4></td>
             						</tr>
             						<tr>
-            							<td><button type="roll" class="sheet-blank-logo-button" value="&{template:powerup} {{name=@{items_name}}}{{Effect=@{itemstype_select} @{items_qty}}}{{Details=@{items_details}}}"></button></td>
-            							<td><input class="attribute" type="text" value="" name="attr_items_name" placeholder="Power/Ability Name" /></td>
-            							<td><select class ="sheet-select" name="attr_itemstype_select" value="Move" style="width:80px">
-            								<option value="Move">Move</option>
-            								<option value="Power">Power</option>
-            								<option value="Precision">Precision</option>
-            								</select>
-            							<td><input class="attribute" type="text" value="" style="width:200px" name="attr_items_qty" placeholder="+1 Move Dice, -1 Power" /></td>
+            							<td><button type="roll" class="sheet-blank-logo-button" value="&{template:powerup} {{name=@{player_name}'s @{items_name}}}{{Cat=@{itemscat_select}}}{{Type=@{itemstype_select}}}{{Rarity=@{itemsrarity_select}}}{{Details=@{items_details}}}"></button></td>
+            							<td><input class="attribute" type="text" value="" name="attr_player_name" /></td>
+            							<td><input class="attribute" type="text" value="" name="attr_items_name" placeholder="Power/Ability Name" accept="Item" /></td>
+            							<td><select class ="sheet-select" name="attr_itemscat_select" value="" style="width:80px" accept="Category">
+            								<option value="Armor">Armor</option>
+            								<option value="Consumable">Consumable</option>
+            								<option value="Equipment">Equipment</option>
+            								<option value="Magic">Magic</option>
+            								<option value="Music">Music</option>
+            								<option value="Tech">Tech</option>
+            								<option value="Weapon">Weapon</option>
+            								</select></td>
+            							<td><select class ="sheet-select" name="attr_itemstype_select" value="" style="width:80px" accept="Type">
+            								<option value="Defense">Defense</option>
+            								<option value="Enchantment">Enchantment</option>
+            								<option value="Movement">Movement</option>
+            								<option value="Offense">Offense</option>
+            								</select></td>
+            							<td><select class ="sheet-select" name="attr_itemsrarity_select" value="" style="width:80px" accept="Rarity">
+            								<option value="Common">Common</option>
+            								<option value="Uncommon">Uncommon</option>
+            								<option value="Rare">Rare</option>
+            								<option value="Ultra Rare">Ultra Rare</option>
+            								<option value="Legendary">Legendary</option>
+            								</select></td>
             						</tr>
             					</table>
             					<table>
             						<tr>
-            							<textarea wrap="soft" class="sheet-textarea" value="" name="attr_items_details" placeholder="Power/Ability Details" /></textarea>
+            							<textarea wrap="soft" class="sheet-textarea" value="" name="attr_items_details" placeholder="Item Details" accept="Details" /></textarea>
             						</tr>
-            					</table>            
+            					</table>
+            					</div>
             				</fieldset>
             			</div>
             		</div>
@@ -1384,13 +1412,13 @@
 <rolltemplate class="sheet-rolltemplate-score">
     <table>
         <tr><th>{{name}}</th></tr>
-    </table>
         {{#Result}}
         <tr>
             <td><span class="tcat"></span>{{Result}}</td>
         <tr>
         </tr>
         {{/Result}}
+    </table>
 </rolltemplate>
 <rolltemplate class="sheet-rolltemplate-item">
     <table>
@@ -1406,21 +1434,27 @@
 <rolltemplate class="sheet-rolltemplate-powerup">
     <table>
         <tr><th>{{name}}</th></tr>
+        {{#Cat}}
+        <tr>
+            <td><span class="tcat">Category - </span>{{Cat}}</td>
+        <tr>
+        </tr>
+        {{/Cat}}
         {{#Type}}
         <tr>
-            <td><span class="tcat"><b>Type: </b></span>{{Type}}</td>
+            <td><span class="tcat">Type - </span>{{Type}}</td>
         <tr>
         </tr>
         {{/Type}}
-        {{#Effect}}
+        {{#Rarity}}
         <tr>
-            <td><span class="tcat"><b>Effect: </b></span>{{Effect}}
+            <td><span class="tcat">Rarity - </span>{{Rarity}}</td>
         <tr>
         </tr>
-        {{/Effect}}
+        {{/Rarity}}
         {{#Details}}
         <tr>
-            <td><span class="tcat"><b>Details: </b></span>{{Details}}
+            <td><span class="tcat">Details - </span>{{Details}}</td>
         <tr>
         </tr>
         {{/Details}}
