[Prophecy 2] Fix for spells + small bug fix (#5010)
* [Prophecy] Update

* Fix for spells

--- a/Prophecy 2/prophecy 2.html
+++ b/Prophecy 2/prophecy 2.html
@@ -7745,11 +7745,11 @@
 					<select name="attr_sortilegesMaitrisesSphere">
 						<option value="@{magieSpherePierre}">La Pierre</option>
 						<option value="@{magieSphereFeu}">Le Feu</option>
-						<option value="@{magieSphereOceans}">Les Océans</option>
-						<option value="@{magieSphereMetal}">Le Métal</option>
+						<option value="@{magieSphereOcéans}">Les Océans</option>
+						<option value="@{magieSphereMétal}">Le Métal</option>
 						<option value="@{magieSphereNature}">La Nature</option>
-						<option value="@{magieSphereReves}">Les Rêves</option>
-						<option value="@{magieSphereCite}">La Cité</option>
+						<option value="@{magieSphereRêves}">Les Rêves</option>
+						<option value="@{magieSphereCité}">La Cité</option>
 						<option value="@{magieSphereVents}">Les Vents</option>
 						<option value="@{magieSphereOmbre}">L'Ombre</option>
 					</select>
